Closed
Bug 525725
Opened 16 years ago
Closed 16 years ago
xulrunner -help crashes [@ LoadPlatformDirectory]
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| status1.9.2 | --- | beta3-fixed |
People
(Reporter: neil, Assigned: neil)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
1.37 KB,
patch
|
benjamin
:
review+
beltzner
:
approval1.9.2+
|
Details | Diff | Splinter Review |
Access violation - code c0000005
nsresult rv = aBundleDirectory->Clone(getter_AddRefs(platformDir));
aBundleDirectory is null.
Call stack:
xul!LoadPlatformDirectory
xul!nsXREDirProvider::LoadBundleDirectories
xul!nsXREDirProvider::GetFilesInternal
xul!nsXREDirProvider::GetFiles
xpcom_core!FindProviderFile
xpcom_core!nsSupportsArray::EnumerateBackwards
xpcom_core!nsDirectoryService::Get
xpcom_core!AppendFromDirServiceList
xpcom_core!xptiInterfaceInfoManager::BuildFileSearchPath
xpcom_core!xptiInterfaceInfoManager::GetInterfaceInfoManagerNoAddRef
xpcom_core!NS_InitXPCOM3_P
xul!ScopedXPCOMStartup::Initialize
xul!DumpArbitraryHelp
xul!DumpHelp
xul!XRE_main
seamonkey!NS_internal_main
seamonkey!wmain
seamonkey!__tmainCRTStartup
seamonkey!wmainCRTStartup
So I'm assuming -help doesn't set mXULAppDir, but it should.
Flags: blocking1.9.2?
| Assignee | ||
Comment 1•16 years ago
|
||
Severity: normal → critical
Keywords: crash
Summary: -help crashes → xulrunner -help crashes [@ LoadPlatformDirectory]
Updated•16 years ago
|
Attachment #409587 -
Flags: review?(benjamin) → review+
| Assignee | ||
Comment 3•16 years ago
|
||
Pushed changeset ac5673902abd to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 4•16 years ago
|
||
Not blocking, but we should take the patch.
Flags: blocking1.9.2? → blocking1.9.2-
Updated•16 years ago
|
Attachment #409587 -
Flags: approval1.9.2+
| Assignee | ||
Comment 5•16 years ago
|
||
Pushed changeset eca0dce6296c to releases/mozilla-1.9.2
status1.9.2:
--- → final-fixed
Comment 6•16 years ago
|
||
turns out that lots of people seem to do do this. its top crash in early 3.6b3 data. re-asking for blocking so it gets a good flag an back on the radar if a regression happens with the landing.
see Bug 529482 for crash analysis
Flags: blocking1.9.2- → blocking1.9.2?
Updated•16 years ago
|
Flags: blocking1.9.2? → blocking1.9.2+
Comment 7•16 years ago
|
||
no reports of this on beta3 or 4 over the last couple of weeks.
there are reports on trunk and 3.5.5
http://crash-stats.mozilla.com/report/index/10dfc0f8-f1c0-4385-aee5-68cce2091203
and more at
http://crash-stats.mozilla.com/report/list?product=Firefox&query_search=signature&query_type=contains&query=LoadPlatformDirectory&date=&range_value=2&range_unit=weeks&do_query=1&signature=LoadPlatformDirectory
does the patch need to go to other branches?
| Assignee | ||
Comment 9•16 years ago
|
||
(In reply to comment #7)
> does the patch need to go to other branches?
No, this particular crash should just be a regression from bug 521262.
Updated•14 years ago
|
Crash Signature: [@ LoadPlatformDirectory]
You need to log in
before you can comment on or make changes to this bug.
Description
•