Bug 525725 -help crashes [@ LoadPlatformDirectory] r=bsmedberg